src/test/resources/Parser/SyntaxErrors/FieldNotFound.front
class A:
    test () {
        this.b;
    }